# micromagaz

./: .gitignore  README.md  db.sqlite3  e  items_views.py  main.py  pyproject.toml
apiv1/: __init__.py
apiv1/products/: crud.py  schemas.py  vies.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  product.py
users/: crud.py  schemas.py  vies.py
